# sdxl-optimization

./: Makefile  README.md  deployment_cells.py  pyproject.toml  requirements.txt
app/: demo.py
configs/: experiments.yaml
notebooks/: 01_compression_study.ipynb  02_deploy_demo.ipynb
scripts/: generate_report.py  run_all.py
server/: serve.py
src/sdxl_opt/: __init__.py  benchmark.py  evaluate.py  pareto.py  pipeline.py  utils.py
